Traducciones y correcciones de errores de tipeo

--- a/app/views/crime_files/edit.html.erb
+++ b/app/views/crime_files/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Crime File</h1>
+<h1>Editar Archivo de Procedimiento</h1>
 
 <%= render 'form', crime_file: @crime_file %>
 
-<%= link_to 'Show', @crime_file %> |
-<%= link_to 'Back', crime_files_path %>
+<%= link_to 'Mostrar', @crime_file %> |
+<%= link_to 'Atrás', crime_files_path %>
