--- a/app/views/crime_thiefs/index.html.erb
+++ b/app/views/crime_thiefs/index.html.erb
@@ -14,7 +14,7 @@
       <tr>
         <td><%= link_to 'Abrir', crime_thief %></td>
         <td><%= link_to 'Editar', edit_crime_thief_path(crime_thief) %></td>
-        <td><%= link_to 'Eliminar', crime_thief, method: :delete, data: { confirm: 'Está seguro?' } %></td>
+        <td><%= link_to 'Eliminar', crime_thief, method: :delete, data: { confirm: '¿Está seguro?' } %></td>
       </tr>
     <% end %>
   </tbody>
