--- a/app/views/crime_witnesses/_form.html.erb
+++ b/app/views/crime_witnesses/_form.html.erb
@@ -13,7 +13,7 @@
 <%= hidden_field_tag 'crime_id', @crime.id  %>
   <% if crime_witness.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(crime_witness.errors.count, "error") %> prohibited this crime_witness from being saved:</h2>
+      <h2><%= pluralize(crime_witness.errors.count, "error") %> impidió que se guardara este testigo:</h2>
 
       <ul>
         <% crime_witness.errors.full_messages.each do |message| %>
