--- a/app/views/crime_files/_form.html.erb
+++ b/app/views/crime_files/_form.html.erb
@@ -12,7 +12,7 @@
 </ul>
   <% if crime_file.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(crime_file.errors.count, "error") %> prohibited this crime_file from being saved:</h2>
+      <h2><%= pluralize(crime_file.errors.count, "error") %> impidió que se guardara este archivo:</h2>
 
       <ul>
         <% crime_file.errors.full_messages.each do |message| %>
