--- a/app/views/crime_files/new.html.erb
+++ b/app/views/crime_files/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Crime File</h1>
+<h1>Nuevo archivo de Procedimiento</h1>
 
 <%= render 'form', crime_file: @crime_file %>
 
-<%= link_to 'Back', crime_files_path %>
+<%= link_to 'Atrás', crime_files_path %>
