--- a/app/views/crime_files/show.html.erb
+++ b/app/views/crime_files/show.html.erb
@@ -1,4 +1,4 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'Edit', edit_crime_file_path(@crime_file) %> |
-<%= link_to 'Back', crime_files_path %>
+<%= link_to 'Editar', edit_crime_file_path(@crime_file) %> |
+<%= link_to 'Atrás', crime_files_path %>
