--- a/app/views/crime_thiefs/new.html.erb
+++ b/app/views/crime_thiefs/new.html.erb
@@ -2,7 +2,7 @@
 <div class="col-3"></div>
 <div class="col-6">
 
-<h1>Añadir autor</h1>
+<h1>Añadir imputado</h1>
 
 <%= render 'form', crime_thief: @crime_thief %>
 
