--- a/app/views/crime_victims/index.html.erb
+++ b/app/views/crime_victims/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Crime Victims</h1>
+<h1>Víctimas</h1>
 
 <table>
   <thead>
@@ -14,7 +14,7 @@
       <tr>
         <td><%= link_to 'Abrir', crime_victim %></td>
         <td><%= link_to 'Editar', edit_crime_victim_path(crime_victim) %></td>
-        <td><%= link_to 'Eliminar', crime_victim, method: :delete, data: { confirm: 'Está seguro?' } %></td>
+        <td><%= link_to 'Eliminar', crime_victim, method: :delete, data: { confirm: '¿Está seguro?' } %></td>
       </tr>
     <% end %>
   </tbody>
