--- a/app/views/crime_witnesses/index.html.erb
+++ b/app/views/crime_witnesses/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Crime Witnesses</h1>
+<h1>Testigos</h1>
 
 <table>
   <thead>
@@ -22,4 +22,4 @@
 
 <br>
 
-<%= link_to 'Nuevo testigo del procedimiento', new_crime_witness_path %>
+<%= link_to 'Añadir testigo', new_crime_witness_path %>
