--- a/app/views/devise/mailer/email_changed.html.erb
+++ b/app/views/devise/mailer/email_changed.html.erb
@@ -1,4 +1,4 @@
-<p>Hello <%= @email %>!</p>
+<p>Hola <%= @email %>!</p>
 
 <% if @resource.try(:unconfirmed_email?) %>
   <p>Nos estamos comunicando con usted para notificarle que su correo electrónico se cambiará a <%= @resource.unconfirmed_email %>.</p>
