Traducciones en Users

--- a/app/views/crimes/show.html.erb
+++ b/app/views/crimes/show.html.erb
@@ -188,7 +188,7 @@
           <% end %>
           <% if file.file.attached?%>
 
-            <td><%= link_to 'Download',file.file,class: ["btn", "btn-primary"]%></td>
+            <td><%= link_to 'Descargar',file.file,class: ["btn", "btn-primary"]%></td>
             <% else %>
             <td><h2>SIN CONTENIDO</h2></td>
           <% end %>
