--- a/app/views/thiefs/_form.html.erb
+++ b/app/views/thiefs/_form.html.erb
@@ -19,7 +19,7 @@
   </div>
   <% if thief.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(thief.errors.count, "error") %> prohibited this thief from being saved:</h2>
+      <h2><%= pluralize(thief.errors.count, "error") %> impidieron registrar al imputado:</h2>
 
       <ul>
         <% thief.errors.full_messages.each do |message| %>
