--- a/app/views/users/mailer/unlock_instructions.html.erb
+++ b/app/views/users/mailer/unlock_instructions.html.erb
@@ -1,7 +1,7 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Hola <%= @resource.email %>!</p>
 
-<p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
+<p>Tu cuenta ha sido bloqueda debido a numerosos intentos de inicio de sesión fallido.</p>
 
-<p>Click the link below to unlock your account:</p>
+<p>Sigue el siguiente enlace para desbloquear tu cuenta:</p>
 
-<p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
+<p><%= link_to 'Debloquear mi cuenta', unlock_url(@resource, unlock_token: @token) %></p>
