CrimeTag model para las etiquetas de los crímenes

--- a/app/views/crimes/_form.html.erb
+++ b/app/views/crimes/_form.html.erb
@@ -8,6 +8,10 @@
 <%= form.text_field :labels %>
 </li>
 <li style="list-style: none">
+  <%= form.label :labels, "Tipo de crimen" %>
+  <%= form.text_field :labels %>
+</li>
+<li style="list-style: none">
 <%= form.label :place, "Lugar" %>
 <%= form.text_field :place %>
 </li>
