--- a/app/views/victims/_form.html.erb
+++ b/app/views/victims/_form.html.erb
@@ -34,7 +34,7 @@
 
     <br>
   <div class="actions">
-    <%= form.submit "Registrar Victima" %>
+    <%= form.submit "Registrar Víctima" %>
   </div>
 <% end %>
 </div>
