--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -38,6 +38,6 @@
 
 <h3>Borrar mi cuenta</h3>
 
-<p><%= button_to "Cancel mi cuenta", registration_path(resource_name), data: { confirm: "Esta seguro?" }, method: :delete %></p>
+<p><%= button_to "Cancelar mi cuenta", registration_path(resource_name), data: { confirm: "¿Está seguro?" }, method: :delete %></p>
 
 <%= link_to "Atrás", :back %>
