Crime view, ingresar testigo, ingresar victima, forms de testigo,victima,ladron

--- a/app/views/crimes/edit.html.erb
+++ b/app/views/crimes/edit.html.erb
@@ -1,7 +1,7 @@
-<div class="field mx-auto", style="width: 200px;">
-
-<h1>Editar Procedimiento</h1>
-
+<head>
+  <h2 style="text-align: center; padding: 3%">Editar Procedimiento</h2>
+</head>
+<body>
 <%= render 'form', crime: @crime %>
 <div class="row">
   <div class="column mx-auto">
@@ -9,4 +9,4 @@
     <%= link_to 'Atrás', :back %>
   </div>
 </div>
-</div>
+</body>
