--- a/app/views/thiefs/new.html.erb
+++ b/app/views/thiefs/new.html.erb
@@ -1,5 +1,11 @@
-<h1>Agregar imputado</h1>
-
+<head>
+  <h2 style="text-align: center; padding: 3%">Registrar imputado</h2>
+</head>
+<body>
 <%= render 'form', thief: @thief %>
-
-<%= link_to 'Atrás', :back%>
+<div class="row">
+  <div class="column mx-auto">
+    <%= link_to 'Volver', :back %>
+  </div>
+</div>
+</body>
