--- a/app/views/witnesses/_form.html.erb
+++ b/app/views/witnesses/_form.html.erb
@@ -1,40 +1,84 @@
-<div class="field mx-auto", style="width: 200px;">
+<body>
 <%= form_with(model: witness, local: false) do |form| %>
-  <% if witness.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(witness.errors.count, "error") %> prohibited this witness from being saved:</h2>
+  <div class="container-fluid">
+    <div class="row justify-content-center custom-margin">
+      <div class="col-sm-6 col-md-4 ">
+        <!-- Add bg-primary in form tag if want form background color-->
+        <!--text-white if want text color white-->
+        <div class="field">
+          <%= form.label :name, "Nombre", class:"pl-2 font-weight-bold" %><br />
+          <%= form.text_field :name, class: "form-control" %>
+        </div>
+        <div class="field">
+          <%= form.label :rut, "RUT", class:"pl-2 font-weight-bold" %><br />
+          <%= form.text_field :rut, class: "form-control" %>
+        </div>
+        <div class="field">
+          <%= form.label :age, "Edad", class:"pl-2 font-weight-bold" %><br />
+          <%= form.number_field :age , class: "form-control" %>
+        </div>
+        <div class="field">
+          <%= form.label :detalle, "Descripcion", class:"pl-2 font-weight-bold" %><br />
+          <%= form.text_field :detalle , class: "form-control" %>
+        </div>
+        <% if witness.errors.any? %>
+          <div id="error_explanation">
+            <h2><%= pluralize(witness.errors.count, "error") %> prohibited this witness from being saved:</h2>
 
-      <ul>
-        <% witness.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
+            <ul>
+              <% witness.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+              <% end %>
+            </ul>
+          </div>
         <% end %>
-      </ul>
+        <div class="actions">
+          <%= form.submit "Registrar testigo", class: "btn btn-outline-success mt-3 btn-block shadow-sm font-weight-bold"%>
+        </div>
+      </div>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= form.label :name, 'Nombre' %>
-    <%= form.text_field :name %>
-  </div>
-
-  <div class="field">
-    <%= form.label :rut %>
-    <%= form.text_field :rut %>
-  </div>
-
-  <div class="field">
-    <%= form.label :age, 'Edad' %>
-    <%= form.number_field :age %>
-  </div>
-
-  <div class="field">
-    <%= form.label :detalle %>
-    <%= form.text_field :detalle %>
-  </div>
-
-    <br>
-  <div class="actions">
-    <%= form.submit "Registrar Testigo" %>
   </div>
 <% end %>
-</div>
+</body>
+
+
+<!--<div class="field mx-auto", style="width: 200px;">-->
+  <%#= form_with(model: witness, local: false) do |form| %>
+    <%# if witness.errors.any? %>
+<!--      <div id="error_explanation">-->
+<!--        <h2><%#= pluralize(witness.errors.count, "error") %> prohibited this witness from being saved:</h2>-->
+
+<!--        <ul>-->
+          <%# witness.errors.full_messages.each do |message| %>
+<!--            <li><%#= message %></li>-->
+          <%# end %>
+<!--        </ul>-->
+<!--      </div>-->
+    <%# end %>
+
+<!--    <div class="field">-->
+      <%#= form.label :name, 'Nombre' %>
+      <%#= form.text_field :name %>
+<!--    </div>-->
+
+<!--    <div class="field">-->
+      <%#= form.label :rut %>
+      <%#= form.text_field :rut %>
+<!--    </div>-->
+
+<!--    <div class="field">-->
+      <%#= form.label :age, 'Edad' %>
+      <%#= form.number_field :age %>
+<!--    </div>-->
+
+<!--    <div class="field">-->
+      <%#= form.label :detalle %>
+      <%#= form.text_field :detalle %>
+<!--    </div>-->
+
+<!--    <br>-->
+<!--    <div class="actions">-->
+      <%#= form.submit "Registrar Testigo" %>
+<!--    </div>-->
+  <%# end %>
+<!--</div>-->
