--- a/app/views/crimes/new.html.erb
+++ b/app/views/crimes/new.html.erb
@@ -1,7 +1,6 @@
-<div class="field mx-auto", style="width: 200px;">
-
-  <h1>Nuevo Procedimiento</h1>
-
-  <%= render 'form', crime: @crime %>
-
-</div>
+<head>
+  <h2 style="text-align: center; padding: 3%">Nuevo Procedimiento</h2>
+</head>
+<body>
+<%= render 'form', crime: @crime %>
+</body>
