--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,49 +1,50 @@
-<div class="field mx-auto", style="width: 200px;">
-  <br /><h2>Sign up</h2><br />
-
+<head>
+  <h2 style="text-align: center; padding: 3%">Registrarse</h2>
+</head>
+<body>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-    <div class="field">
-      <%= f.label :name %><br />
-      <%= f.text_field :name %>
+  <div class="container-fluid">
+    <div class="row justify-content-center custom-margin">
+      <div class="col-sm-6 col-md-4 ">
+        <!-- Add bg-primary in form tag if want form background color-->
+        <!--text-white if want text color white-->
+        <div class="field">
+          <%= f.label :email , "Correo electronico", class:"pl-2 font-weight-bold" %><br />
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control"%>
+        </div>
+        <div class="field">
+          <%= f.label :name , "Nombre", class:"pl-2 font-weight-bold"%><br />
+          <%= f.text_field :name, class: "form-control" %>
+        </div>
+        <div class="field">
+          <%= f.label :rut, "Rut", class:"pl-2 font-weight-bold" %><br />
+          <%= f.text_field :rut, class: "form-control" %>
+        </div>
+        <br>
+        <div class="field">
+          <%= f.label :job, "Ocupacion", class:"pl-2 font-weight-bold" %>
+          <%= f.select(:job, raw('<option value="Carabinero">Carabinero</option><option value="Fiscal">Fiscal</option>'))%>
+        </div>
+        <br>
+        <div class="field">
+          <%= f.label :password , "Contrasena", class:"pl-2 font-weight-bold"%><br />
+          <% if @minimum_password_length %>
+            <em>(Minimo <%= @minimum_password_length %> caracteres)</em>
+          <% end %>
+          <%= f.password_field :password, autocomplete: "new-password", class: "form-control"%>
+        </div>
+        <div class="field">
+          <%= f.label :password_confirmation, "Confirmar contrasena", class:"pl-2 font-weight-bold" %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "new-password" , class: "form-control"%>
+        </div>
+        <div class="actions">
+          <%= f.submit "Registrarse", class: "btn btn-outline-success mt-3 btn-block shadow-sm font-weight-bold"%>
+        </div>
+        <div class="form-group">
+          <%= render "devise/shared/links"%>
+        </div>
+      </div>
     </div>
-
-    <div class="field">
-      <%= f.label :rut %><br />
-      <%= f.text_field :rut %>
-    </div><br />
-
-    <div class="field">
-      <%= f.label :job %>
-      <%= f.select(:job, raw('<option value="Carabinero">Carabinero</option><option value="Fiscal">Fiscal</option>')) %>
-    </div><br />
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions" id="btn">
-    <%= f.submit "Sign up" %>
-  </div>
-
 <% end %>
-
-<%= render "devise/shared/links" %>
-
-  </div>
-
+</body>
