--- a/app/views/witnesses/new.html.erb
+++ b/app/views/witnesses/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New Witness</h1>
-
+<head>
+  <h2 style="text-align: center; padding: 3%">Ingresar Testigo</h2>
+</head>
+<body>
 <%= render 'form', witness: @witness %>
-
-<%= link_to 'Atrás', :back %>
+<div class="row">
+  <div class="column mx-auto">
+    <%= link_to 'Volver', :back %>
+  </div>
+</div>
+</body>
