--- a/app/views/crimes/show.html.erb
+++ b/app/views/crimes/show.html.erb
@@ -5,6 +5,63 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <title>Crimen</title>
+  <style>
+    .openChatBtn {
+      background-color: rgb(52, 58, 64);
+      color: white;
+      padding: 16px 20px;
+      border: none;
+      font-weight: 500;
+      font-size: 18px;
+      cursor: pointer;
+      opacity: 1;
+      width: 117px;
+    }
+    .openChat {
+      display: none;
+      position: fixed;
+      border: 3px solid #343a406b;
+      z-index: 9;
+    }
+    #cbox {
+      max-width: 200px;
+      padding: 10px;
+      background-color: #343a40;
+    }
+    #cbox textarea {
+      width: 100%;
+      font-size: 18px;
+      padding: 15px;
+      margin: 5px 0 22px 0;
+      border: none;
+      font-weight: 500;
+      background: #d5e7ff;
+      color: rgb(0, 0, 0);
+      resize: none;
+      min-height: 200px;
+    }
+    #cbox textarea:focus {
+      background-color: rgb(219, 255, 252);
+      outline: none;
+    }
+    #chbtn {
+      background-color: rgb(34, 197, 107);
+      color: white;
+      padding: 16px 20px;
+      font-weight: bold;
+      border: none;
+      cursor: pointer;
+      width: 100%;
+      margin-bottom: 10px;
+      opacity: 0.8;
+    }
+    #cbox .close {
+      background-color: red;
+    }
+    #chbtn:hover, .openChatBtn:hover {
+      opacity: 1;
+    }
+  </style>
 </head>
 <body>
   <main>
@@ -19,6 +76,20 @@
       <div class="list-group list-group-flush container-fluid">
         <a href="#" class="list-group-item list-group-item-action bg-dark text-white font-italic">Inicio</a>
         <a href="#multi" class="list-group-item list-group-item-action bg-dark text-white font-italic">Multimedia</a>
+        <div class="chatWrapp">
+          <button class="openChatBtn position-fixed " onclick="openForm()">Chat</button>
+          <div class="openChat">
+            <form id="cbox">
+              <h1 class="text-white">Chat</h1>
+              <label for="msg" class="text-white"><b>Message</b></label>
+              <textarea placeholder="Type message.." name="msg" required></textarea>
+              <button type="submit" class="btn" id="chbtn">Send</button>
+              <button type="button" class="btn close" id="chbtn" onclick="closeForm()">
+                Close
+              </button>
+            </form>
+          </div>
+        </div>
       </div>
     </div>
     <div class="container-fluid">
@@ -173,6 +244,16 @@
     </div>
   </main>
 </body>
+<script>
+    document .querySelector(".openChatBtn") .addEventListener("click", openForm);
+    document.querySelector(".close").addEventListener("click", closeForm);
+    function openForm() {
+        document.querySelector(".openChat").style.display = "block";
+    }
+    function closeForm() {
+        document.querySelector(".openChat").style.display = "none";
+    }
+</script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </html>
