--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,19 +22,19 @@
         </div>
         <br>
         <div class="field">
-          <%= f.label :job, "Ocupacion", class:"pl-2 font-weight-bold" %>
+          <%= f.label :job, "Ocupación", class:"pl-2 font-weight-bold" %>
           <%= f.select(:job, raw('<option value="Carabinero">Carabinero</option><option value="Fiscal">Fiscal</option>'))%>
         </div>
         <br>
         <div class="field">
           <%= f.label :password , "Contrasena", class:"pl-2 font-weight-bold"%><br />
           <% if @minimum_password_length %>
-            <em>(Minimo <%= @minimum_password_length %> caracteres)</em>
+            <em>(Mínimo <%= @minimum_password_length %> caracteres)</em>
           <% end %>
           <%= f.password_field :password, autocomplete: "new-password", class: "form-control"%>
         </div>
         <div class="field">
-          <%= f.label :password_confirmation, "Confirmar contrasena", class:"pl-2 font-weight-bold" %><br />
+          <%= f.label :password_confirmation, "Confirmar contraseñ a", class:"pl-2 font-weight-bold" %><br />
           <%= f.password_field :password_confirmation, autocomplete: "new-password" , class: "form-control"%>
         </div>
         <div class="actions">
