cambios en tabla de index crime para que sea responsive y boton crimen

--- a/app/views/crimes/new.html.erb
+++ b/app/views/crimes/new.html.erb
@@ -3,4 +3,9 @@
 </head>
 <body>
 <%= render 'form', crime: @crime %>
+<div class="row">
+  <div class="column mx-auto">
+    <%= link_to 'Volver', :back %>
+  </div>
+</div>
 </body>
