--- a/app/views/crimes/index.html.erb
+++ b/app/views/crimes/index.html.erb
@@ -4,7 +4,7 @@
 <div class="col-6">
 <h1>Delitos Actuales</h1>
 
-<table class="table table-striped table-dark">
+<table class="table table-striped table-dark table-responsive-sm">
   <thead>
     <tr>
       <th >Folio</th>
@@ -38,7 +38,7 @@
 
 <br>
   <% if signed_in? %>
-    <a class="nav-link" <%= link_to 'Reportar', new_crime_path ,:style =>"color:black"%></a>
+    <a class="nav-link float-right btn btn-success" <%= link_to 'Reportar', new_crime_path ,:style =>"color:black"%></a>
   <% else %>
   <% end %>
 </div>
