tags cambiado por tags2

--- a/app/views/crimes/show.html.erb
+++ b/app/views/crimes/show.html.erb
@@ -68,7 +68,7 @@
     <br>
     <div class="container-fluid">
       <h1 class="container-fluid col-6">Caso N°<%= @crime.id%> <%= @crime.title%></h1>
-      <h5 class="container-fluid col-6">Marca: <%= @tags2.tag%></h5>
+      <h5 class="container-fluid col-6">Marca: <%= @tags.tag%></h5>
       <h6 class="container-fluid col-6">Lugar del hecho: <%= @crime.place%></h6>
     </div>
     <br>
