Relato del crimen > Relato

--- a/app/views/crimes/_form.html.erb
+++ b/app/views/crimes/_form.html.erb
@@ -18,7 +18,7 @@
           <%= form.text_field :place, class: "form-control" %>
         </div>
         <div class="field">
-          <%= form.label :description, "Relato del crimen", class:"pl-2 font-weight-bold" %><br />
+          <%= form.label :description, "Relato", class:"pl-2 font-weight-bold" %><br />
           <%= form.text_area :description , class: "form-control" %>
         </div>
         <div class="field">
