--- a/app/views/crimes/show.html.erb
+++ b/app/views/crimes/show.html.erb
@@ -93,7 +93,7 @@
       </div>
     </div>
     <div class="container-fluid">
-      <h3 class="container-fluid col-6">Relato del crimen</h3>
+      <h3 class="container-fluid col-6">Relato</h3>
       <p class="container-fluid col-6"><%= @crime.description%></p>
     </div>
     <div class="container-fluid">
