cambios de redireccion al root

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,35 +3,16 @@
   <head>
     <title>Fiscapp</title>
     <div class="pos-f-t">
-<!--  <div class="collapse" id="navbarToggleExternalContent">-->
-<!--    <div class="bg-dark p-4">-->
-<!--      <h4 class="text-white">Links Disponibles</h4>-->
-      <%#=link_to "Home", root_path, :style => "color:white"%>
-      <%# if signed_in? %>
-        <%#=link_to "Reportar", new_crime_path, :style => "color:white"%>
-        <%#= link_to "Salir", destroy_user_session_path, method: :delete %>
-      <%# else %>
-        <%#= link_to "Ingresar", new_user_session_path %>
-        <%#= link_to "Registrarse", new_user_registration_path %>
-      <%# end %>
-<!--    </div>-->
-<!--  </div>-->
-<!--  <nav class="navbar navbar-dark bg-dark">-->
-<!--    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">-->
-<!--      <span class="navbar-toggler-icon"></span>-->
-<!--    </button>-->
-<!--  </nav>-->
-
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="http://localhost:3000/">Sistema Flagrancias</a>
+        <a class="navbar-brand" href="/">Sistema Flagrancias</a>
 
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item active">
-              <a class="nav-link" href="http://localhost:3000/"> Inicio <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/"> Inicio <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <% if signed_in? %>
