--- a/app/views/crimes/show.html.erb
+++ b/app/views/crimes/show.html.erb
@@ -220,8 +220,17 @@
                     <td><%=file.id%></td>
                     <td><%= file.description%></td>
                     <td><%=file.user.name%></td>
-                    <% if file.file.attached?%>
-                      <td><%= image_tag(file.file, style:'width:100%') %></td>
+                    
+                    <% if file.file.representable? %>
+                      <td><embed src=<%= url_for(file.file) %> type="application/pdf" width="100%" height="400px" /></td>
+                      
+                    <% elsif file.file.content_type == "video/mp4"%>
+                      <td>
+                        <div style="width:400px; height:400px">
+                            <%= video_tag(url_for(file.file), style:"width:100%;height: auto", controls:'') %>
+                            <br>
+                        </div>
+                      </td>
                     <% else %>
                       <td><h2>SIN CONTENIDO</h2></td>
                     <% end %>
