--- a/app/views/crimes/show.html.erb
+++ b/app/views/crimes/show.html.erb
@@ -238,6 +238,11 @@
             </div>
           </div>
 
+          <div class="float-right">
+            <% if current_user.Carabinero? %>
+              <%= link_to "Enviar a Fiscal", @crime,:class => "btn btn-primary"%>
+            <% end %>
+          </div>
 
         </div>
       </div>
