--- a/app/views/crimes/index.html.erb
+++ b/app/views/crimes/index.html.erb
@@ -2,14 +2,15 @@
 <div class="row">
 <div class="col-3"></div>
 <div class="col-6">
-<h1>Delitos Actuales</h1>
+<h1>Procedimientos activos</h1>
 
 <table class="table table-striped table-dark table-responsive-sm">
   <thead>
     <tr>
       <th >Folio</th>
-      <th >Fecha</th>
-      <th >Nº Involucrados</th>
+      <th >Fecha creación</th>
+      <th >Nº Imputados</th>
+      <th>Fecha modificación</th>
       <% if signed_in? %>
       <th>Editar</th>
       <th>Ver</th>
@@ -23,6 +24,7 @@
         <td><%= crime.id %></td>
         <td><%= crime.created_at.to_date %></td>
         <td><%= CrimeThief.where(crime_id:crime.id).count %></td>
+        <td><%= crime.updated_at.to_date %></td>
         <% if signed_in? %>
           <%# if current_user.Carabinero? %>
           <td><a class="nav-link" <%= link_to "Editar", edit_crime_path(crime.id),:class => "btn btn-primary"%></a></td>
